<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MyWeiXinActivity!</string>
    <string name="app_name">MyWeiXin</string>
    <string name="main_title">微信</string>
<string name="main_login">登录</string>
<string name="main_login_msg">使用QQ号或微信号登录</string>
<string name="main_regist">注册</string>
<string name="main_regist_msg">如果你没有QQ号，可以使用手机注册</string>
<string name="login_user_hint">输入手机号码</string>
<string name="login_passwd_hint">输入密码</string>
<string name="login_forget_passwd">忘记密码?</string>
<string name="me">我</string>
<string name="ta_chuangyi">Ta</string>
<string name="my_chuangyi_career">我的创意忆涯</string>
<string name="see_other_chuangyi">见见其他创忆者</string>
<string name="yes">确&#160;&#160;&#160;定</string>
<string name="chuangyi_today">今日创忆</string>
<string name="chuangyi_chance">还剩&#160;3&#160;次摇一摇换回忆机会</string>
<string name="my_chuangyi">我的创意</string>
<string name="my_name">韩梅梅</string>
<string name="my_level">创忆能力：LV&#160;12</string>
<string name="my_follow_num">234</string>
<string name="my_follow">关注</string>
<string name="my_fans_num">123</string>
<string name="my_fans">粉丝</string>
<string name="my_chuangyis_num">112</string>
<string name="my_chuangyis">创忆</string>
<string name="my_praise_num">3&#160;个新点赞</string>
<string name="my_comment_num">2&#160;条新评论</string>
<string name="my_tocreate_num">1&#160;个待创忆</string>
<string name="my_chuangyi_1">2014.6.14&#160;关注了&#160;李雷</string>
<string name="lilei_name">李雷</string>
<string name="lilei_level">创忆能力：LV&#160;11</string>
<string name="lilei_follow_num">156</string>
<string name="lilei_fans_num">181</string>
<string name="lilei_chuangyis_num">126</string>
<string name="my_chuangyi_2">2014.6.14&#160;创造了新回忆</string>
<string name="my_chuangyi_record1">韩梅梅：&#160;今天客户肯定了我的提案，怎能不微笑，小伙伴们逛街走起！</string>
<string name="my_record1_praise_num">71</string>
<string name="my_record1_comment_num">21</string>
<string name="of_my_follow">我关注的</string>
<string name="find_more">发现更多</string>
<string name="smile">微笑</string>
<string name="i_want_too">我也想要</string>
<string name="my_chuangyi_record1_time">2014.01.01</string>
<string name="my_chuangyi_record1_pos">三里屯</string>
<string name="others_chuangyi">Ta的创意</string>
</resources>