<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@drawable/chuangyi_today">
    
    <RelativeLayout
      	android:layout_width="fill_parent"
	    android:layout_height="60dp"
        android:background="@drawable/head"
        android:orientation="horizontal">

	<ImageView
	    android:layout_width="30dp"
	    android:layout_height="60dp"
	    android:layout_alignParentLeft="true"
	    android:src="@drawable/tri" />
	
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="60dp"
	    android:gravity="center_vertical"
	    android:layout_centerInParent="true"
	    android:text="@string/chuangyi_today"
	    android:textSize="25sp"
	    android:textColor="#ffffff"/>

	</RelativeLayout>

	<Button
	    android:id="@+id/today_yes"
	    android:layout_width="fill_parent"
	    android:layout_height="60dp"
	    android:layout_alignParentBottom="true"
	    android:background="@drawable/today_bottom"
	    android:text="@string/yes"
	    android:textColor="#838383"
	    android:textSize="25sp" />

	<TextView
	    android:id="@+id/chuangyi_chance"
	    android:layout_width="wrap_content"
	    android:layout_height="50dp"
	    android:layout_above="@+id/today_yes"
	    android:layout_centerHorizontal="true"
	    android:layout_marginBottom="30dp"
	    android:text="@string/chuangyi_chance"
	    android:textColor="#838383"
	    android:textSize="20sp" />

</RelativeLayout>
