<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_index"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_index_back"
    android:orientation="vertical" >

	<ImageView 
	    android:id="@+id/chuangyi_today"
	    android:layout_centerVertical="true"
	    android:layout_centerHorizontal="true"
	    android:src="@drawable/today"
	    android:layout_width="150dp"
	    android:layout_height="150dp"
	    android:background="@android:color/transparent"/>

	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="30dp"
	    android:text="@string/my_chuangyi"
	    android:textColor="#ffffff"
	    android:textSize="30pt" />
	
		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_alignParentLeft="true"
		    android:layout_marginTop="120dp"
		    android:gravity="center"
		    android:orientation="horizontal" >

			<TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_vertical|center"
			     android:layout_marginLeft="30dp"
			    android:text="@string/my_chuangyi_career"
			    android:textColor="#ffffff"
			    android:textSize="10pt" />

			<ImageView
			    android:id="@+id/tri2"
			    android:layout_width="25dp"
			    android:layout_height="25dp"
			    android:layout_marginLeft="3dp"
			    android:background="@android:color/transparent"
			    android:src="@drawable/tri2" />

		</LinearLayout>
		
		<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="370dp"
	    android:text="@string/ta_chuangyi"
	    android:textColor="#ffffff"
	    android:textSize="30pt" />
	
		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_alignParentLeft="true"
		    android:layout_marginTop="460dp"
		    android:gravity="center"
		    android:orientation="horizontal" >

			<TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_vertical|center"
			     android:layout_marginLeft="30dp"
			    android:text="@string/see_other_chuangyi"
			    android:textColor="#ffffff"
			    android:textSize="10pt" />

			<ImageView
			    android:id="@+id/tri1"
			    android:layout_width="25dp"
			    android:layout_height="25dp"
			    android:layout_marginLeft="3dp"
			    android:background="@android:color/transparent"
			    android:src="@drawable/tri1" />

		</LinearLayout>

</RelativeLayout>
