<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#EEEEEE"
    android:orientation="vertical" >
    
    <RelativeLayout
      	android:layout_width="fill_parent"
	    android:layout_height="60dp"
        android:background="#B94C5F"
        android:orientation="horizontal">

		<ImageView
	  		android:id="@+id/cy_lilei_back"
	   		android:layout_width="30dp"
	    	android:layout_height="60dp"
	    	android:layout_alignParentLeft="true"
	    	android:src="@drawable/tri" />
	
		<TextView
	    	android:layout_width="wrap_content"
	    	android:layout_height="50dp"
	    	android:gravity="center_vertical"
	    	android:layout_centerInParent="true"
	    	android:text="@string/others_chuangyi"
	    	android:textSize="25sp"
	    	android:textColor="#ffffff"/>

	</RelativeLayout>
 	<ScrollView
		android:scrollbars="none"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
		<LinearLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
 	<RelativeLayout
      	android:layout_width="fill_parent"
	    android:layout_height="100dp"
        android:background="#ffffff"
        android:orientation="horizontal">

		<ImageView
		    android:id="@+id/lilei_photo"
		    android:src="@drawable/lilei"
	   		android:layout_width="80dp"
	    	android:layout_height="80dp"
	    	android:layout_marginLeft="20dp"
	    	android:layout_marginTop="10dp" />
	    	
	    	<RelativeLayout
	    	    android:layout_toRightOf="@id/lilei_photo"
      			android:layout_width="wrap_content"
	    		android:layout_height="fill_parent"
	    		android:layout_marginLeft="20dp"
	    		android:layout_marginTop="10dp" 
        		android:orientation="vertical">

				<TextView
				    android:id="@+id/lilei_name"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_alignParentLeft="true"
				    android:layout_alignParentTop="true"
				    android:text="@string/lilei_name"
				    android:textColor="#B94C5F"
				    android:textSize="18sp" />
	    			
	    		<RelativeLayout
    			    android:id="@+id/lilei_name_level"
   					android:layout_width="wrap_content"
    				android:layout_height="wrap_content"
    				android:layout_alignParentLeft="true"
    				android:layout_below="@id/lilei_name"
       				android:orientation="horizontal">

					<TextView
					    android:id="@+id/lilei_level"
				    	android:layout_width="wrap_content"
				    	android:layout_height="wrap_content"
				    	android:layout_alignParentLeft="true"
				    	android:text="@string/lilei_level"
				    	android:textColor="#B94C5F"
				    	android:textSize="12sp" />
					
					<ImageView
					    android:src="@drawable/level"
					    android:layout_width="100dp"
					    android:layout_height="wrap_content"
					    android:layout_toRightOf="@id/lilei_level"
					    android:layout_marginLeft="10dp"/>
				</RelativeLayout>
					
	    			<!-- Layout of 关注 粉丝 创意 -->
	    			<LinearLayout
	    			    android:id="@+id/lilei_statics"
      					android:layout_width="230dp"
	    				android:layout_height="wrap_content"
	    				android:layout_alignParentLeft="true"
	    				android:layout_marginLeft="-20dp"
	    				android:layout_below="@id/lilei_name_level"
        				android:orientation="horizontal">
					
	    			    <RelativeLayout 
	    			        android:layout_width="wrap_content"
	    			        android:layout_height="wrap_content"
	    			        android:orientation="vertical"
	    			        android:layout_weight="1">
	    			        
	    			        <TextView 
	    			            android:id="@+id/lilei_follow_num"
	    			            android:layout_width="wrap_content"
	    			            android:layout_height="wrap_content"
	    			            android:layout_marginRight="10dp"
	    			            android:text="@string/lilei_follow_num"
	    			            android:layout_alignParentRight="true"
	    			            android:textSize="18sp"
	    			            android:textColor="#5F5F5F"/>
	    			       	<TextView 
	    			            android:layout_width="wrap_content"
	    			            android:layout_height="wrap_content"
	    			            android:layout_below="@id/lilei_follow_num"
	    			            android:layout_marginRight="10dp"
	    			            android:text="@string/my_follow"
	    			            android:layout_alignParentRight="true"
	    			            android:textSize="12sp"
	    			            android:textColor="#5F5F5F"/>
	    			        
	    			    </RelativeLayout>
		    			
	    			    <View  
            				android:layout_height="fill_parent" 
            				android:layout_width="2dp"
            				android:background="#CBCBCB" />
	    			    
		    			<RelativeLayout 
	    			        android:layout_width="wrap_content"
	    			        android:layout_height="wrap_content"
	    			        android:orientation="vertical"
	    			        android:layout_weight="1">
	    			        
	    			        <TextView 
	    			            android:id="@+id/lilei_fans_num"
	    			            android:layout_width="wrap_content"
	    			            android:layout_height="wrap_content"
	    			            android:layout_marginRight="10dp"
	    			            android:text="@string/lilei_fans_num"
	    			            android:layout_alignParentRight="true"
	    			            android:textSize="18sp"
	    			            android:textColor="#5F5F5F"/>
	    			       	<TextView 
	    			            android:layout_width="wrap_content"
	    			            android:layout_height="wrap_content"
	    			            android:layout_below="@id/lilei_fans_num"
	    			            android:layout_marginRight="10dp"
	    			            android:text="@string/my_fans"
	    			            android:layout_alignParentRight="true"
	    			            android:textSize="12sp"
	    			            android:textColor="#5F5F5F"/>
	    			        
	    			    </RelativeLayout>
	    			   	<View  
            				android:layout_height="fill_parent" 
            				android:layout_width="2dp"
            				android:background="#CBCBCB" />
	    			    
		    			<RelativeLayout 
	    			        android:layout_width="wrap_content"
	    			        android:layout_height="wrap_content"
	    			        android:orientation="vertical"
	    			        android:layout_weight="1">
	    			        
	    			        <TextView 
	    			            android:id="@+id/lilei_chuangyis_num"
	    			            android:layout_width="wrap_content"
	    			            android:layout_height="wrap_content"
	    			            android:layout_marginRight="10dp"
	    			            android:text="@string/lilei_chuangyis_num"
	    			            android:layout_alignParentRight="true"
	    			            android:textSize="18sp"
	    			            android:textColor="#5F5F5F"/>
	    			       	<TextView 
	    			            android:layout_width="wrap_content"
	    			            android:layout_height="wrap_content"
	    			            android:layout_below="@id/lilei_chuangyis_num"
	    			            android:layout_marginRight="10dp"
	    			            android:text="@string/lilei_chuangyis_num"
	    			            android:layout_alignParentRight="true"
	    			            android:textSize="12sp"
	    			            android:textColor="#5F5F5F"/>
	    			        
	    			    </RelativeLayout>
					</LinearLayout>
	    			
				</RelativeLayout>
        <View
            android:id="@+id/profile_split"  
            android:layout_height="2dp" 
            android:layout_width="fill_parent"
            android:layout_below="@id/lilei_photo"
            android:layout_marginTop="10dp"
            android:background="#CBCBCB" />

	</RelativeLayout>

	
	<View  
    	android:layout_height="5dp" 
        android:layout_width="fill_parent"
        android:background="@drawable/shadow" />
	

	    <LinearLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
		
	       <LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
	            android:orientation="horizontal" >

	            <View
	                android:layout_width="190dp"
	                android:layout_height="3dp"
	                android:layout_marginTop="10dp"
	                android:background="#cccccc" />

	            <TextView
	                android:id="@+id/lilei_chuangyi_2"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="5dp"
	                android:layout_marginTop="0dp"
	                android:text="@string/my_chuangyi_2"
	                android:textColor="#cccccc"
	                android:textSize="15sp" />
	        </LinearLayout>
	        
	       	<LinearLayout 
	       	    android:layout_width="340dp"
	       	    android:layout_height="wrap_content"
	       	    android:layout_gravity="center"
    	    	android:layout_marginTop="10dp"
	       	    android:orientation="vertical">
	        <RelativeLayout
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center">
	            <ImageView
	                android:src="@drawable/lilei_chuangyi_slogan"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:adjustViewBounds="true"
	                android:layout_centerHorizontal="true"/>
	           	<ImageView
	                android:src="@drawable/my_similar_chuangyi"
	                android:layout_width="47dp"
	                android:layout_height="47dp"
	                android:adjustViewBounds="true"
	                android:layout_alignParentRight="true"/>
	        </RelativeLayout>
	       	<ImageView
	                android:src="@drawable/lilei_chuangyi"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:adjustViewBounds="true"/>
	       	<LinearLayout 
	       	    android:layout_width="fill_parent"
	       	    android:layout_height="100dp"
	       	    android:background="#ffffff"
	       	    android:orientation="vertical">
	       	<LinearLayout 
	       	    android:layout_width="fill_parent"
	       	    android:layout_height="80dp"
	       	    android:background="#ffffff"
	       	    android:orientation="horizontal">
	           	<ImageView 
	           	    android:src="@drawable/square_me"
	           	    android:layout_width="wrap_content"
	           	    android:layout_height="fill_parent"
	           	    android:adjustViewBounds="true"/>
	           	<TextView 
	           	    android:id="@+id/my_chuangyi_record1"
	           	    android:layout_width="wrap_content"
	           	    android:layout_height="wrap_content"
	           	    android:layout_marginLeft="10dp"
	           	   	android:layout_gravity="center_vertical"
	           	    android:textSize="18sp"
	           	    android:text="@string/my_chuangyi_record1"
	           	    android:textColor="#5F5F5F"/>
	       	</LinearLayout>
	       	<LinearLayout 
		       	    android:layout_width="wrap_content"
		       	    android:layout_height="wrap_content"
		       	    android:layout_gravity="right|bottom"
		       	    android:layout_marginRight="10dp">
   		           	<TextView 
		           	    android:layout_width="wrap_content"
		           	    android:layout_height="wrap_content"
		           	   	android:layout_gravity="center_vertical"
		           	    android:textSize="12sp"
		           	    android:text="@string/my_chuangyi_record1_time"
		           	    android:textColor="#B24957"/>
   		           	<ImageView 
   		           	    android:src="@drawable/location"
   		           	    android:layout_width="wrap_content"
   		           	    android:layout_height="fill_parent"
   		           	    android:adjustViewBounds="true"/>
		           	<TextView 
		           	    android:layout_width="wrap_content"
		           	    android:layout_height="wrap_content"
		           	   	android:layout_gravity="center_vertical"
		           	    android:textSize="12sp"
		           	    android:text="@string/my_chuangyi_record1_pos"
		           	    android:textColor="#B24957"/>
		       	</LinearLayout>
		   	</LinearLayout>
	       	<LinearLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="60dp"
		    android:orientation="horizontal"
		    android:background="#DEDAD9">
		    <LinearLayout 
		        android:layout_width="wrap_content"
		        android:layout_height="40dp"
		        android:orientation="horizontal"
		        android:layout_gravity="center"
		        android:layout_weight="1">
		        <ImageView 
		            android:id="@+id/my_record1_praise_inform"
		            android:src="@drawable/praise_icon"
		            android:layout_width="wrap_content"
		            android:layout_height="fill_parent"
		            android:layout_marginLeft="30dp"
		            android:adjustViewBounds="true"/>

		        <TextView
		            android:id="@+id/my_record1_prasie_num"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="5dp"
		            android:layout_gravity="center_vertical"
		            android:text="@string/my_record1_praise_num"
		            android:textSize="18sp" 
		            android:textColor="#5F5F5F"/>
		    </LinearLayout>
		    <LinearLayout 
		        android:layout_width="wrap_content"
		        android:layout_height="40dp"
		        android:layout_gravity="center"
		        android:orientation="horizontal"
		        android:layout_weight="1">
		        <ImageView 
		            android:id="@+id/my_record1_comment_inform"
		            android:src="@drawable/comment_icon"
		            android:layout_width="wrap_content"
		            android:layout_height="fill_parent"
		            android:layout_marginLeft="50dp"
		            android:adjustViewBounds="true"/>

		        <TextView
		            android:id="@+id/my_record1_comment_num"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="5dp"
		            android:layout_gravity="center_vertical"
		            android:text="@string/my_record1_comment_num"
		            android:textSize="18sp" 
		            android:textColor="#5F5F5F"/>
		    </LinearLayout>
		</LinearLayout>
	       	
			</LinearLayout>

		</LinearLayout>
		</LinearLayout>	
    </ScrollView>	

</LinearLayout>
