<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
	      	android:layout_width="fill_parent"
		    android:layout_height="60dp"
	        android:background="#B94C5F"
	        android:orientation="horizontal">
	
			<ImageView
		  		android:id="@+id/cy_other_back"
		   		android:layout_width="30dp"
		    	android:layout_height="match_parent"
		    	android:layout_alignParentLeft="true"
		    	android:src="@drawable/tri" />
		
			<TextView
		    	android:layout_width="wrap_content"
		    	android:layout_height="match_parent"
		    	android:gravity="center_vertical"
		    	android:layout_centerInParent="true"
		    	android:text="@string/others_chuangyi"
		    	android:textSize="25sp"
		    	android:textColor="#ffffff"/>
	
		</RelativeLayout>
		<RelativeLayout
	      	android:layout_width="fill_parent"
		    android:layout_height="60dp"
 	        android:background="#ffffff">
	        <LinearLayout
	            android:id="@+id/text_tab"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerInParent="true"
	            android:orientation="horizontal">
	            <TextView android:id="@+id/tab1_text"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_weight="1.0"
	                android:gravity="center"
	                android:paddingRight="70dp"
	                android:text="@string/of_my_follow"
	                android:textSize="20sp"/>
	            <TextView android:id="@+id/tab2_text"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_weight="1.0"
	                android:paddingLeft="70dp"
	                android:gravity="center"
	                android:text="@string/find_more"
	                android:textSize="20sp"/>
	     	</LinearLayout>
	     	<ImageView 
	     	    android:src="@drawable/slogan"
	     	    android:layout_width="wrap_content"
	     	    android:layout_height="match_parent"
	     	    android:adjustViewBounds="true"
	     	    android:layout_centerInParent="true"/>
	     	<TextView android:id="@+id/cursor_text"
	           	android:layout_width="80dp"
	           	android:layout_height="2dp"
	           	android:layout_marginTop="2dp"
	           	android:layout_alignLeft="@id/text_tab"
	           	android:layout_below="@id/text_tab"
	           	android:background="#B6495E"/>
     </RelativeLayout>          
     
 	<View  
    	android:layout_height="5dp" 
        android:layout_width="fill_parent"
        android:background="@drawable/shadow" />
 	
    </LinearLayout>
    <android.support.v4.view.ViewPager 
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" />
</LinearLayout>
